--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -18,9 +18,26 @@
                    
                    <div class="caption">
                        <h4><%= campground.name %></h4>
+                       
                    </div>
+                   
+                   <div class="caption">
+                        <h4><%= campground.Disease %></h4>
+                    </div>
+                    
+                   <div class="caption">
+                        <h4><%= campground.desc %></h4>
+                    </div>
+                    
+                   <div class="caption">
+                        <h4><%= campground.Age %></h4>
+                    </div>
+                    
+                   <div class="caption">
+                        <h4><%= campground.Disease_score %></h4>
+                    </div>
                    <p>
-                       <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">More Info</a>
+                       <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">Book Appointment</a>
                    </p>
                 </div>
             </div>
