--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -4,22 +4,103 @@
         <div class="col-md-3">
             <p class="lead">Doctor Patient Portal</p>
             <div class="list-group">
-                <li class="list-group-item active">Info 1</li>
-                <li class="list-group-item">Info 2</li>
-                <li class="list-group-item">Info 3</li>
+                <li class="list-group-item active">Info Page</li>
+                
             </div>
         </div>
         <div class="col-md-9">
             <div class="thumbnail">
-                <img class="img-responsive" src="<%= campground.image %>">
+                <h4><a><%= campground.Disease %></a>
+
+
+
+       
+                   <div>
+                       <select>
+                            <label>Select Doctor</label>
+                            <option>Select Doctor</option>
+                            <option>Dr.Aggarwal</option>
+                            <option>Dr.Mishra</option>
+                            <option>Dr.Anurag</option>
+                            <option>Dr.Malik</option>
+                            <option>Dr.Juneja</option>
+                            <option>Dr.Jhonny</option>
+                            <option>Dr.Rastogi</option>
+                            <option>Dr.Sneha</option>
+                            <option>Dr.Ortho</option>
+                            <option>Dr.Neeraj</option>
+                            <option>Dr.Divesh</option>
+                    
+                       </select>
+    </div>
+<div>
+    <select>
+            <option>Select Month</option>
+        <option>January</option>
+        <option>February</option>
+        <option>March</option>
+        <option>April</option>
+        <option>May</option>
+        <option>June</option>
+        <option>July</option>
+        <option>August</option>
+        <option>September</option>
+        <option>October</option>
+        <option>November</option>
+        <option>December</option>
+    </select>
+    <select>
+        <option>Select Date</option>
+    <option>1</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option>
+        <option>5</option>
+        <option>6</option>
+        <option>7</option>
+        <option>8</option>
+        <option>9</option>
+        <option>10</option>
+        <option>11</option>
+        <option>12</option>
+    <option>13</option>
+    <option>14</option>
+    <option>15</option>
+    <option>16</option>
+    <option>17</option>
+    <option>18</option>
+    <option>19</option>
+    <option>20</option>
+    <option>21</option>
+    <option>22</option>
+    <option>23</option>
+    <option>24</option>
+    <option>25</option>
+    <option>26</option>
+    <option>27</option>
+    <option>28</option>
+    <option>29</option>
+    <option>30</option>
+    <option>31</option>
+    
+    </select>
+</div>
+                </h4> 
                 <div class="caption-full">
-                    <h4 class="pull-right"><%=campground.price%>/Appointment</h4>
+                    <!-- <h4 class="pull-right"><%=campground.price%>/Appointment</h4> -->
                     <h4><a><%=campground.name%></a></h4>
                     <p><%= campground.description %></p>
+                <div>
+
+                    </div>
                     <p>
-                        <em>Submitted By <%= campground.author.username %></em>
+                        <em>Patient name <%= campground.patient.username %></em>
                     </p>
-                    <% if(currentUser && campground.author.id.equals(currentUser._id)){ %>
+                    <div>
+                        <button class= "btn btn-md btn-success" ><a href="/campgrounds"> Book Appointment</a></button>
+
+                    </div>
+                    <% if(currentUser && campground.patient.id.equals(currentUser._id)){ %>
                         <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
                         <form id="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
                             <button class="btn btn-xs btn-danger">Cancel</button>
@@ -35,12 +116,12 @@
                 <% campground.comments.forEach(function(comment){ %>
                     <div class="row">
                         <div class="col-md-12">
-                            <strong><%= comment.author.username %></strong>
+                            <strong><%= comment.patient.username %></strong>
                             <span class="pull-right">10 days ago</span>
                             <p>
                                 <%= comment.text %> 
                             </p>
-                        <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
+                        <% if(currentUser && comment.patient.id.equals(currentUser._id)){ %>
                             <a class="btn btn-xs btn-warning" 
                                href="/campgrounds/<%=campground._id %>/comments/<%=comment._id %>/edit">Edit</a>
                             <form id="delete-form" action="/campgrounds/<%=campground._id %>/comments/<%=comment._id %>?_method=DELETE" method="POST">
