--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -10,13 +10,48 @@
                 
                 
                 <div class="form-group">
-                    <input class="form-control" type="text" name="campground[image]" placeholder="Disease">
+                    <input class="form-control" type="text" name="campground[Disease]" placeholder="Disease">
                 </div>
                 <div class="form-group">
                     <input class="form-control" type="text" name="campground[description]" placeholder="description">
                 </div>
+
+<div>
+
+                <div class="form-group row">
+                    <label class="col-sm-5 col-md-5 col-lg-5 col-form-label">Age</label>
+                    <div class="col-sm-7 col-md-7 col-lg-7">
+                        <input class="form-control" style="width: 100%;" type="number" name="campground[Age]" required="true" placeholder="Enter Age">
+                    </div>
+                </div>
+
+                <!-- Last name input -->
+                <div class="form-group row">
+                    <label class="col-sm-5 col-md-5 col-lg-5 col-form-label">Disease score</label>
+                    <div class="col-sm-7 col-md-7 col-lg-7">
+                        <input class="form-control" style="width: 100%;" type="number" name=" campground[diseaseScore]" required="true" placeholder="Enter new disease score...">
+                    </div>
+                </div>
+
+<div class= " form-group row">
+    <select> 
+        <option> Heart</option>
+        <option> liver</option>
+        <option> Physician</option>
+        <option> Dentist</option>
+        <option> surgeon</option>
+        
+    </select>
+</div>
+            	<!-- <input class="btn btn-success" style="float: right;" type="Submit" name="Submit" value="Add disease">
+            </form>
+        </div> -->
+
+
+</div>
+
                 <div class="form-group">
-                    <button class="btn btn-lg btn-primary btn-block">Submit!</button>
+                    <button class="btn btn-lg btn-primary btn-block">Suggest Doctor</button>
                 </div>
             </form>
             <a href="/campgrounds">Go Back</a>
