--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,13 @@
     <head>
         <title>Appointment Portal</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
         <link rel="stylesheet" href="/stylesheets/main.css">
+        
+        <link rel="stylesheet" href="css/style.css">
+        <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+
+        <script type="text/javascript" src="js/calender.js"></script>
     </head>
     <body>
     <nav class="navbar navbar-default">
@@ -25,7 +31,7 @@
                         <li><a href="/login">Login</a></li>
                         <li><a href="/register">Sign Up</a></li>
                     <% } else { %>
-                        <li><a href="#">Signed In As<%= currentUser.username %></a></li>
+                        <li><a href="#">Signed In As <%= currentUser.username %></a></li>
                         <li><a href="/logout">Logout</a></li>
                     <% } %>
                 </ul>
